dark mode fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1022,6 +1022,7 @@ body {
 
 .action-description {
   font-size: 18px;
+  color: #484848 !important;
   margin: 0 0 25px;
   opacity: 0.9;
   line-height: 1.5;
@@ -1058,6 +1059,7 @@ body {
 
 .action-note {
   font-size: 14px;
+  color: #333 !important;
   opacity: 0.8;
   margin: 0;
   line-height: 1.5;
@@ -2638,6 +2640,10 @@ body {
 }
 
 /* Footer - Socials */
+
+.subtitle-new {
+  color: #d5d5d5 !important;
+}
 
 .social-icons {
   display: flex;
@@ -4248,4 +4254,16 @@ body {
     padding-left: max(0.5rem, env(safe-area-inset-left, 0.5rem));
     padding-right: max(0.5rem, env(safe-area-inset-right, 0.5rem));
   }
+}
+
+.bc-desc {
+  color: #1a1a1a !important;
+}
+
+.breadcrumb-bp {
+  background-color: #f5e0e0 !important;
+}
+
+.copyright-name {
+  color: #919191 !important;
 }
