--- a/assets/scss/elements/_button.scss
+++ b/assets/scss/elements/_button.scss
@@ -398,7 +398,7 @@ div {
 .btn-read-more {
   span {
     position: relative;
-    color: var(--color-heading);
+    color: white;
     display: inline-block;
     line-height: 35px;
     transition: 0.3s;
